feat(annotation-processor): propertly 'cascade' defaults
fixes #34